# omarchy-mcp

./: PUBLISHING.md  README.md  package.json  publish.py  pyproject.toml
.github/workflows/: python-publish.yml
scripts/: omarchy_themes.py
src/omarchy_mcp/: __init__.py  omarchy_themes.json  server.py  system-prompt.txt
tests/: __init__.py  test_run_command.py
