[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omarchy-mcp"
version = "0.0.5"
description = "MCP Server for Omarchy"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ServiceStack", email = "team@servicestack.net"}
]
keywords = ["mcp", "omarchy", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "aiohttp",
    "fastmcp>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ServiceStack/omarchy-mcp"
Repository = "https://github.com/ServiceStack/omarchy-mcp"

[project.scripts]
omarchy-mcp = "omarchy_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/omarchy_mcp"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/LICENSE",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.ruff]
# Set the target Python version
target-version = "py37"

# Set line length
line-length = 120

# Enable auto-fixing
fix = true

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]

# Ignore specific rules if needed
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["llms"]

[tool.ruff.lint.per-file-ignores]
# Ignore all errors in publish.py and test_package.py
"publish.py" = ["ALL"]
"test_package.py" = ["ALL"]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"
